Fixed Missing background, added username in request
Dashboard had no background.
Added the username in requests so in the menu instead of the id,

--- a/son/public/css/dashboard.css
+++ b/son/public/css/dashboard.css
@@ -1,5 +1,5 @@
 body {
-    background: url("img/2.jpg");
+    background: url("../img/2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
